--- a/src/WinAppDeploy/WinAppDeploy.GUI/WinAppDeploy.GUI.csproj
+++ b/src/WinAppDeploy/WinAppDeploy.GUI/WinAppDeploy.GUI.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Extensions\ConsoleOutputExtensions.cs" />
     <Compile Include="Models\DeployTargetDevice.cs" />
     <Compile Include="Services\IDeployService.cs" />
+    <Compile Include="Utils\RegexHelper.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="Resources\Icons.xaml">
