--- a/src/WinAppDeploy.GUI/packages.config
+++ b/src/WinAppDeploy.GUI/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="DeltaCompressionDotNet" version="1.0.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.2.5" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
