--- a/src/WinAppDeploy.GUI/packages.config
+++ b/src/WinAppDeploy.GUI/packages.config
@@ -6,6 +6,7 @@
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net452" />
+  <package id="OctoPack" version="3.0.60" targetFramework="net452" developmentDependency="true" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
   <package id="squirrel.windows" version="1.2.5" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
